--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
-        <p> This interactive chart allows the user to select an ID and information about the ID pops up with their corresponding informative graphs will appear. The graphs display which bacteria grows in the person's belly button, along with how often the belly button is washed.</p>
+        <p class="text-danger"> This interactive chart allows the user to select an ID and information about the ID pops up with their corresponding informative graphs will appear. The graphs display which bacteria grows in the person's belly button, along with how often the belly button is washed.</p>
       </div>
     </div>
     
